# desktopPetRS

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh
src/: _main.rs  fragment_shader.glsl  main.rs  vertex_shader.glsl
