[package]
name = "desktopPetRS"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "2.1.0"
bevy = { version = "0.14.0", default-features = false, features = [
    "basis-universal",
    "bevy_asset",
    "bevy_animation",
    "animation",
    "bevy_winit",
    "x11",
    "png",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
] }
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = "thin"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3
